# arild-rust-workshop

./: .gitignore  Cargo.toml  README.md
part5/: Cargo.toml  Instructions.md
part5/solution/: Cargo.toml  main.rs
part5/src/: main.rs  web_state.rs
src/: main.rs  part1.rs  part3.rs  part4.rs  part5.rs  part6.rs
src/part5/: Cargo.toml  Instructions.md
src/part5/solution/: web_state.rs
src/part5/src/: web_state.rs
